Only use workaround for kapt with JDK 16